--- a/index.html
+++ b/index.html
@@ -14,37 +14,202 @@
   </head>
 
   <body>
-    <main>
-      <h5>Coming Soon</h5>
-    </main>
-    <ul>
-      <li>
-        <a
-          class="b-link"
-          target="_blank"
-          href="https://github.com/nicolasbertolino"
-          >Github</a
+    <header>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" class="star">
+        <path
+          fill-rule="evenodd"
+          d="M20.078 14.026L24.157 0l5.02 14.026 12.548-7.013-6.588 13.247L48 24.312l-12.863 4.675 6.588 12.78-13.803-7.481L24.157 48l-4.079-13.714-13.176 7.48 5.96-12.779L0 24l12.863-3.74-5.02-13.247 12.235 7.013z"
+        />
+      </svg>
+      <ul class="numbers">
+        <li>01</li>
+        <li>02</li>
+        <li>03</li>
+        <li>04</li>
+        <li>05</li>
+        <li>06</li>
+        <li>07</li>
+        <li>08</li>
+        <li>09</li>
+      </ul>
+      <div class="circle-container">
+        <div class="circle"></div>
+      </div>
+      <div class="vertical-line"></div>
+      <div class="horizontal-line"></div>
+      <h1 class="name">Nicolas Bertolino</h1>
+      <ul class="roles">
+        <li>Front-end Developer</li>
+        <li>UI/UX Designer</li>
+      </ul>
+      <ul class="socials">
+        <li>
+          <a class="b-link" href="mailto:hello@nicolasbertolino.com">Mail</a>
+        </li>
+        <li>
+          <a
+            class="b-link"
+            target="_blank"
+            href="https://www.linkedin.com/in/nicolasbertolino"
+            >Linkedin</a
+          >
+        </li>
+        <li>
+          <a
+            class="b-link"
+            target="_blank"
+            href="https://www.behance.net/nicolasbertolino"
+            >Behance</a
+          >
+        </li>
+        <li>
+          <a
+            class="b-link"
+            target="_blank"
+            href="https://github.com/nicolasbertolino"
+            >Github</a
+          >
+        </li>
+      </ul>
+      <!-- <div class="light">
+        <p>Passion de jour</p>
+      </div>
+      <div class="dark">
+        <p>Comme de nuit</p>
+      </div> -->
+    </header>
+    <div class="work">
+      <h4 style="margin: 0 auto; width: max-content;">
+        Mes Réalisations
+      </h4>
+      <div class="projects">
+        <div>
+          <a
+            target="_blank"
+            href="https://www.blackmarchofficial.com/"
+            data-number="01"
+            >Black March
+          </a>
+          <a target="_blank" href="https://www.terrefete.com/" data-number="02"
+            >Terrefète
+          </a>
+        </div>
+        <div>
+          <a
+            target="_blank"
+            href="https://www.lesptitscoquelicots.com/"
+            data-number="03"
+            >Les P'tits Coquelicots
+          </a>
+        </div>
+      </div>
+      <div class="selected-work">
+        <div class="left">
+          <div class="img">
+            <img
+              src="https://www.lesptitscoquelicots.com/assets/images/photos/lamam1.jpg"
+              alt=""
+            />
+          </div>
+          <h3>Les P'tits Coquelicots</h3>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 48 48"
+            class="star"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M20.078 14.026L24.157 0l5.02 14.026 12.548-7.013-6.588 13.247L48 24.312l-12.863 4.675 6.588 12.78-13.803-7.481L24.157 48l-4.079-13.714-13.176 7.48 5.96-12.779L0 24l12.863-3.74-5.02-13.247 12.235 7.013z"
+            />
+          </svg>
+        </div>
+        <div class="right">
+          <div>
+            <h4>Lumière sur</h4>
+            <h2>Les P'tits Coquelicots</h2>
+            <h4>Website / Logo / Charte Graphique</h4>
+            <p>
+              Les P'tits Coquelicots est une Maison d'Assistantes Maternelles,
+              un mode de garde à mi-chemin entre l'accueil individuel et
+              l'accueil collectif, innovant et original pour les enfants.
+            </p>
+            <p>
+              <a
+                target="_blank"
+                class="a-link"
+                href="https://www.lesptitscoquelicots.com/"
+                >Voir le site &#8599;
+              </a>
+            </p>
+          </div>
+          <div class="bottom"></div>
+        </div>
+      </div>
+    </div>
+    <div class="catchphrase">
+      <h3>
+        Des sites engageants qui ne ressemblent pas à celui du voisin. Pour que
+        votre visiteur ait le béguin et se souvienne de vous. À vous la gloire.
+      </h3>
+    </div>
+    <div class="about">
+      <div>
+        <h1>N.</h1>
+        <h3>a bit about myself</h3>
+        <p>
+          Un jour, mon cerveau gauche et mon cerveau droit ont signé un pacte de
+          coopération. Depuis je design et développe des sites, d'abord à
+          Toulouse mais aussi partout en France.
+        </p>
+        <p>
+          Dans une précédente vie, j'étudiais la sociologie et l'anthropologie.
+          J'aime tenir compte de ce que nous apprennent les sciences humaines
+          sur nos façons de penser et de faire des choix.
+        </p>
+      </div>
+    </div>
+    <div class="contact">
+      <p>
+        <span>Dites–moi tout et</span>
+        <span><strong>lançons–le</strong>, ce beau projet</span
+        ><span
+          ><a class="a-link" href="mailto:hello@nicolasbertolino.com"
+            >hello@nicolasbertolino.com</a
+          ></span
         >
-      </li>
-      <li>
-        <a
-          class="b-link"
-          target="_blank"
-          href="https://www.linkedin.com/in/nicolasbertolino"
-          >Linkedin</a
-        >
-      </li>
-      <li>
-        <a
-          class="b-link"
-          target="_blank"
-          href="https://www.behance.net/nicolasbertolino"
-          >Behance</a
-        >
-      </li>
-    </ul>
+      </p>
+      <ul class="socials">
+        <li>
+          <a
+            class="b-link"
+            target="_blank"
+            href="https://www.linkedin.com/in/nicolasbertolino"
+            >Linkedin</a
+          >
+        </li>
+        <li>
+          <a
+            class="b-link"
+            target="_blank"
+            href="https://www.behance.net/nicolasbertolino"
+            >Behance</a
+          >
+        </li>
+        <li>
+          <a
+            class="b-link"
+            target="_blank"
+            href="https://github.com/nicolasbertolino"
+            >Github</a
+          >
+        </li>
+      </ul>
+    </div>
     <!-- Scritps -->
-    <script src="assets/js/charming.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.4/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
     <script src="assets/js/main.js"></script>
   </body>
 </html>
