Change GSAP on img

--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
         </li>
       </ul>
       <!-- <div class="light">
-        <p>Passion de jour</p>
+        <p>À travers les formes</p>
       </div>
       <div class="dark">
-        <p>Comme de nuit</p>
+        <p>Et les couleurs</p>
       </div> -->
     </header>
     <div class="work">
@@ -138,7 +138,7 @@
                 target="_blank"
                 class="a-link"
                 href="https://www.lesptitscoquelicots.com/"
-                >Voir le site &#8599;
+                >Voir le site +
               </a>
             </p>
           </div>
