Add in projects' modals

--- a/index.html
+++ b/index.html
@@ -84,23 +84,11 @@
       </h4>
       <div class="projects">
         <div>
-          <a
-            target="_blank"
-            href="https://www.blackmarchofficial.com/"
-            data-number="01"
-            >Black March
-          </a>
-          <a target="_blank" href="https://www.terrefete.com/" data-number="02"
-            >Terrefète
-          </a>
+          <p data-number="01" data-project="bm" class="project__link">Black March</p>
+          <p data-number="02" data-project="tf" class="project__link">Terrefète</p>
         </div>
         <div>
-          <a
-            target="_blank"
-            href="https://www.lesptitscoquelicots.com/"
-            data-number="03"
-            >Les P'tits Coquelicots
-          </a>
+          <p data-number="03" data-project="lpc" class="project__link">Les P'tits Coquelicots</p>
         </div>
       </div>
       <div class="selected-work">
@@ -204,6 +192,124 @@
           >
         </li>
       </ul>
+    </div>
+    <div class="overlay"></div>
+    <div class="close__container">
+      <i class="close"></i>
+    </div>
+    <div class="project" id="bm">
+      <div class="project__infos">
+        <div>
+          <p>2020</p>
+          <p>
+            <a
+              class="a-link"
+              target="_blank"
+              href="https://www.blackmarchofficial.com/"
+              >www.blackmarchofficial.com
+            </a>
+          </p>
+        </div>
+        <h4>Website / Charte Graphique</h4>
+        <h2>Black March</h2>
+        <div class="project__description">
+          <p>
+            Black March est un groupe de musique métal né à Toulouse. Le projet
+            est arrivé avec un challenge : un e-shop pour la vente des CDs,
+            T-shirts et autres joyeusetés.
+          </p>
+          <p>
+            Après avoir passé en revue les différentes possibilités, Paypal a
+            été retenu tant pour son coût négligeable que pour son intégration
+            pratique et rapide. Le site est bâti avec VueJS.
+          </p>
+        </div>
+        <div class="project__see">
+          <a
+            class="a-link"
+            target="_blank"
+            href="https://github.com/nicolasbertolino/black-march"
+            >Voir le projet sur Github
+          </a>
+        </div>
+        <span class="project__number">01</span>
+      </div>
+      <div></div>
+    </div>
+    <div class="project" id="tf">
+      <div class="project__infos">
+        <div>
+          <p>2019</p>
+          <p>
+            <a class="a-link" target="_blank" href="https://www.terrefete.com/"
+              >www.terrefete.com
+            </a>
+          </p>
+        </div>
+        <h4>Website</h4>
+        <h2>Terrefète</h2>
+        <div class="project__description">
+          <p>
+            Dans le hameau de Terrefète, une jolie maison familiale se
+            transforme en gite l'été venant. Terrefète c'est plus de 200m² de propriété au coeur des Pyrénées, c'est l'air frais de la montagne et surtout, c'est chaque année des dizaines de clients satisfaits.
+          </p>
+          <p>
+            Il fallait pour cela rendre justice à cette location avec une
+            landing page, fluide et imagée, une présentation unique et efficace
+            de la maison et ses alentours.
+          </p>
+        </div>
+        <div class="project__see">
+          <a
+            class="a-link"
+            target="_blank"
+            href="https://github.com/nicolasbertolino/terrefete"
+            >Voir le projet sur Github
+          </a>
+        </div>
+        <span class="project__number">02</span>
+      </div>
+      <div></div>
+    </div>
+    <div class="project" id="lpc">
+      <div class="project__infos">
+        <div>
+          <p>2018 – 2020</p>
+          <p>
+            <a
+              class="a-link"
+              target="_blank"
+              href="https://www.lesptitscoquelicots.com/"
+              >www.lesptitscoquelicots.com
+            </a>
+          </p>
+        </div>
+        <h4>Website / Logo / Charte Graphique</h4>
+        <h2>Les P'tits Coquelicots</h2>
+        <div class="project__description">
+          <p>
+            Les P'tits Coquelicots est une Maison d'Assistantes Maternelles qui
+            fait des choses qui comptent : s'occuper d'enfants en bas âge et les
+            faire grandir. Les Coquelicots ce sont eux, fragiles et plein
+            d'ardeur.
+          </p>
+          <p>
+            Pour en rendre compte j'ai créé un site qui mélange douceur et
+            vivacité et qui, bien que s'adressant en priorité aux parents, va
+            non sans rappeler le monde joueur et tendre de l'enfant.
+          </p>
+        </div>
+        <div class="project__see">
+          <a
+            class="a-link"
+            target="_blank"
+            href="https://github.com/nicolasbertolino/les-ptits-coquelicots"
+            >Voir le projet sur Github
+          </a>
+        </div>
+        <span class="project__number">03</span>
+      </div>
+      <div></div>
     </div>
     <!-- Scritps -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.4/gsap.min.js"></script>
