Create pages for projects

--- a/index.html
+++ b/index.html
@@ -13,309 +13,193 @@
     <link rel="stylesheet" href="https://use.typekit.net/cfj0zjm.css" />
   </head>
 
-  <body>
-    <header>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" class="star">
-        <path
-          fill-rule="evenodd"
-          d="M20.078 14.026L24.157 0l5.02 14.026 12.548-7.013-6.588 13.247L48 24.312l-12.863 4.675 6.588 12.78-13.803-7.481L24.157 48l-4.079-13.714-13.176 7.48 5.96-12.779L0 24l12.863-3.74-5.02-13.247 12.235 7.013z"
-        />
-      </svg>
-      <ul class="numbers">
-        <li>01</li>
-        <li>02</li>
-        <li>03</li>
-        <li>04</li>
-        <li>05</li>
-        <li>06</li>
-        <li>07</li>
-        <li>08</li>
-        <li>09</li>
-      </ul>
-      <div class="circle-container">
-        <div class="circle"></div>
-      </div>
-      <div class="vertical-line"></div>
-      <div class="horizontal-line"></div>
-      <h1 class="name">Nicolas Bertolino</h1>
-      <ul class="roles">
-        <li>Front-end Developer</li>
-        <li>UI/UX Designer</li>
-      </ul>
-      <ul class="socials">
-        <li>
-          <a class="b-link" href="mailto:hello@nicolasbertolino.com">Mail</a>
-        </li>
-        <li>
-          <a
-            class="b-link"
-            target="_blank"
-            href="https://www.linkedin.com/in/nicolasbertolino"
-            >Linkedin</a
-          >
-        </li>
-        <li>
-          <a
-            class="b-link"
-            target="_blank"
-            href="https://www.behance.net/nicolasbertolino"
-            >Behance</a
-          >
-        </li>
-        <li>
-          <a
-            class="b-link"
-            target="_blank"
-            href="https://github.com/nicolasbertolino"
-            >Github</a
-          >
-        </li>
-      </ul>
-      <!-- <div class="light">
-        <p>À travers les formes</p>
-      </div>
-      <div class="dark">
-        <p>Et les couleurs</p>
-      </div> -->
-    </header>
-    <div class="work">
-      <h4 style="margin: 0 auto; width: max-content;">
-        Mes Réalisations
-      </h4>
-      <div class="projects">
-        <div>
-          <p data-number="01" data-project="bm" class="project__link">Black March</p>
-          <p data-number="02" data-project="tf" class="project__link">Terrefète</p>
+  <body data-barba="wrapper">
+    <main data-barba="container">
+      <header>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" class="star">
+          <path
+            fill-rule="evenodd"
+            d="M20.078 14.026L24.157 0l5.02 14.026 12.548-7.013-6.588 13.247L48 24.312l-12.863 4.675 6.588 12.78-13.803-7.481L24.157 48l-4.079-13.714-13.176 7.48 5.96-12.779L0 24l12.863-3.74-5.02-13.247 12.235 7.013z"
+          />
+        </svg>
+        <ul class="numbers">
+          <li>01</li>
+          <li>02</li>
+          <li>03</li>
+          <li>04</li>
+          <li>05</li>
+          <li>06</li>
+          <li>07</li>
+          <li>08</li>
+          <li>09</li>
+        </ul>
+        <div class="circle-container">
+          <div class="circle"></div>
         </div>
-        <div>
-          <p data-number="03" data-project="lpc" class="project__link">Les P'tits Coquelicots</p>
+        <div class="vertical-line"></div>
+        <div class="horizontal-line"></div>
+        <h1 class="name">Nicolas Bertolino</h1>
+        <ul class="roles">
+          <li>Front-end Developer</li>
+          <li>UI/UX Designer</li>
+        </ul>
+        <ul class="socials">
+          <li>
+            <a class="b-link" href="mailto:hello@nicolasbertolino.com">Mail</a>
+          </li>
+          <li>
+            <a
+              class="b-link"
+              target="_blank"
+              href="https://www.linkedin.com/in/nicolasbertolino"
+              >Linkedin</a
+            >
+          </li>
+          <li>
+            <a
+              class="b-link"
+              target="_blank"
+              href="https://www.behance.net/nicolasbertolino"
+              >Behance</a
+            >
+          </li>
+          <li>
+            <a
+              class="b-link"
+              target="_blank"
+              href="https://github.com/nicolasbertolino"
+              >Github</a
+            >
+          </li>
+        </ul>
+        <!-- <div class="light">
+          <p>À travers les formes</p>
         </div>
-      </div>
-      <div class="selected-work">
-        <div class="left">
-          <div class="img">
-            <img
-              src="https://www.lesptitscoquelicots.com/assets/images/photos/lamam1.jpg"
-              alt=""
-            />
-          </div>
-          <h3>Les P'tits Coquelicots</h3>
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 48 48"
-            class="star"
-          >
-            <path
-              fill-rule="evenodd"
-              d="M20.078 14.026L24.157 0l5.02 14.026 12.548-7.013-6.588 13.247L48 24.312l-12.863 4.675 6.588 12.78-13.803-7.481L24.157 48l-4.079-13.714-13.176 7.48 5.96-12.779L0 24l12.863-3.74-5.02-13.247 12.235 7.013z"
-            />
-          </svg>
-        </div>
-        <div class="right">
+        <div class="dark">
+          <p>Et les couleurs</p>
+        </div> -->
+      </header>
+      <div id="work">
+        <h4>Mes Réalisations</h4>
+        <div class="projects">
           <div>
-            <h4>Lumière sur</h4>
-            <h2>Les P'tits Coquelicots</h2>
-            <h4>Website / Logo / Charte Graphique</h4>
-            <p>
-              Les P'tits Coquelicots est une Maison d'Assistantes Maternelles,
-              un mode de garde à mi-chemin entre l'accueil individuel et
-              l'accueil collectif, innovant et original pour les enfants.
-            </p>
-            <p>
-              <a
-                target="_blank"
-                class="a-link"
-                href="https://www.lesptitscoquelicots.com/"
-                >Voir le site +
-              </a>
-            </p>
+            <a href="black-march" data-number="01">Black March</a>
+            <a href="terrefete" data-number="02">Terrefète</a>
           </div>
-          <div class="bottom"></div>
+          <div>
+            <a href="les-ptits-coquelicots" data-number="03">Les P'tits Coquelicots</a>
+          </div>
+        </div>
+        <div class="selected-work">
+          <div class="left">
+            <div class="img">
+              <img
+                src="https://www.lesptitscoquelicots.com/assets/images/photos/lamam1.jpg"
+                alt=""
+              />
+            </div>
+            <h3>Les P'tits Coquelicots</h3>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 48 48"
+              class="star"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M20.078 14.026L24.157 0l5.02 14.026 12.548-7.013-6.588 13.247L48 24.312l-12.863 4.675 6.588 12.78-13.803-7.481L24.157 48l-4.079-13.714-13.176 7.48 5.96-12.779L0 24l12.863-3.74-5.02-13.247 12.235 7.013z"
+              />
+            </svg>
+          </div>
+          <div class="right">
+            <div>
+              <h4>Lumière sur</h4>
+              <h2>Les P'tits Coquelicots</h2>
+              <h4>Website / Logo / Charte Graphique</h4>
+              <p>
+                Les P'tits Coquelicots est une Maison d'Assistantes Maternelles,
+                un mode de garde à mi-chemin entre l'accueil individuel et
+                l'accueil collectif, innovant et original pour les enfants.
+              </p>
+              <p>
+                <a
+                  target="_blank"
+                  class="a-link"
+                  href="https://www.lesptitscoquelicots.com/"
+                  >Voir le site +
+                </a>
+              </p>
+            </div>
+            <div class="bottom"></div>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="catchphrase">
-      <h3>
-        Des sites engageants qui ne ressemblent pas à celui du voisin. Pour que
-        votre visiteur ait le béguin et se souvienne de vous. À vous la gloire.
-      </h3>
-    </div>
-    <div class="about">
-      <div>
-        <h1>N.</h1>
-        <h3>a bit about myself</h3>
+      <div class="catchphrase">
+        <h3>
+          Des sites engageants qui ne ressemblent pas à celui du voisin. Pour que
+          votre visiteur ait le béguin et se souvienne de vous. À vous la gloire.
+        </h3>
+      </div>
+      <div class="about">
+        <div>
+          <h1>N.</h1>
+          <h3>a bit about myself</h3>
+          <p>
+            Un jour, mon cerveau gauche et mon cerveau droit ont signé un pacte de
+            coopération. Depuis je design et développe des sites, d'abord à
+            Toulouse mais aussi partout en France.
+          </p>
+          <p>
+            Dans une précédente vie, j'étudiais la sociologie et l'anthropologie.
+            J'aime tenir compte de ce que nous apprennent les sciences humaines
+            sur nos façons de penser et de faire des choix.
+          </p>
+        </div>
+      </div>
+      <div class="contact">
         <p>
-          Un jour, mon cerveau gauche et mon cerveau droit ont signé un pacte de
-          coopération. Depuis je design et développe des sites, d'abord à
-          Toulouse mais aussi partout en France.
+          <span>Dites–moi tout et</span>
+          <span><strong>lançons–le</strong>, ce beau projet</span
+          ><span
+            ><a class="a-link" href="mailto:hello@nicolasbertolino.com"
+              >hello@nicolasbertolino.com</a
+            ></span
+          >
         </p>
-        <p>
-          Dans une précédente vie, j'étudiais la sociologie et l'anthropologie.
-          J'aime tenir compte de ce que nous apprennent les sciences humaines
-          sur nos façons de penser et de faire des choix.
-        </p>
-      </div>
-    </div>
-    <div class="contact">
-      <p>
-        <span>Dites–moi tout et</span>
-        <span><strong>lançons–le</strong>, ce beau projet</span
-        ><span
-          ><a class="a-link" href="mailto:hello@nicolasbertolino.com"
-            >hello@nicolasbertolino.com</a
-          ></span
-        >
-      </p>
-      <ul class="socials">
-        <li>
-          <a
-            class="b-link"
-            target="_blank"
-            href="https://www.linkedin.com/in/nicolasbertolino"
-            >Linkedin</a
-          >
-        </li>
-        <li>
-          <a
-            class="b-link"
-            target="_blank"
-            href="https://www.behance.net/nicolasbertolino"
-            >Behance</a
-          >
-        </li>
-        <li>
-          <a
-            class="b-link"
-            target="_blank"
-            href="https://github.com/nicolasbertolino"
-            >Github</a
-          >
-        </li>
-      </ul>
-    </div>
-    <div class="overlay"></div>
-    <div class="close__container">
-      <i class="close"></i>
-    </div>
-    <div class="project" id="bm">
-      <div class="project__infos">
-        <div>
-          <p>2020</p>
-          <p>
+        <ul class="socials">
+          <li>
             <a
-              class="a-link"
+              class="b-link"
               target="_blank"
-              href="https://www.blackmarchofficial.com/"
-              >www.blackmarchofficial.com
-            </a>
-          </p>
-        </div>
-        <h4>Website / Charte Graphique</h4>
-        <h2>Black March</h2>
-        <div class="project__description">
-          <p>
-            Black March est un groupe de musique métal né à Toulouse. Le projet
-            est arrivé avec un challenge : un e-shop pour la vente des CDs,
-            T-shirts et autres joyeusetés.
-          </p>
-          <p>
-            Après avoir passé en revue les différentes possibilités, Paypal a
-            été retenu tant pour son coût négligeable que pour son intégration
-            pratique et rapide. Le site est bâti avec VueJS.
-          </p>
-        </div>
-        <div class="project__see">
-          <a
-            class="a-link"
-            target="_blank"
-            href="https://github.com/nicolasbertolino/black-march"
-            >Voir le projet sur Github
-          </a>
-        </div>
-        <span class="project__number">01</span>
-      </div>
-      <div></div>
-    </div>
-    <div class="project" id="tf">
-      <div class="project__infos">
-        <div>
-          <p>2019</p>
-          <p>
-            <a class="a-link" target="_blank" href="https://www.terrefete.com/"
-              >www.terrefete.com
-            </a>
-          </p>
-        </div>
-        <h4>Website</h4>
-        <h2>Terrefète</h2>
-        <div class="project__description">
-          <p>
-            Dans le hameau de Terrefète, une jolie maison familiale se
-            transforme en gite l'été venant. Terrefète c'est plus de 200m² de propriété au coeur des Pyrénées, c'est l'air frais de la montagne et surtout, c'est chaque année des dizaines de clients satisfaits.
-          </p>
-          <p>
-            Il fallait pour cela rendre justice à cette location avec une
-            landing page, fluide et imagée, une présentation unique et efficace
-            de la maison et ses alentours.
-          </p>
-        </div>
-        <div class="project__see">
-          <a
-            class="a-link"
-            target="_blank"
-            href="https://github.com/nicolasbertolino/terrefete"
-            >Voir le projet sur Github
-          </a>
-        </div>
-        <span class="project__number">02</span>
-      </div>
-      <div></div>
-    </div>
-    <div class="project" id="lpc">
-      <div class="project__infos">
-        <div>
-          <p>2018 – 2020</p>
-          <p>
+              href="https://www.linkedin.com/in/nicolasbertolino"
+              >Linkedin</a
+            >
+          </li>
+          <li>
             <a
-              class="a-link"
+              class="b-link"
               target="_blank"
-              href="https://www.lesptitscoquelicots.com/"
-              >www.lesptitscoquelicots.com
-            </a>
-          </p>
-        </div>
-        <h4>Website / Logo / Charte Graphique</h4>
-        <h2>Les P'tits Coquelicots</h2>
-        <div class="project__description">
-          <p>
-            Les P'tits Coquelicots est une Maison d'Assistantes Maternelles qui
-            fait des choses qui comptent : s'occuper d'enfants en bas âge et les
-            faire grandir. Les Coquelicots ce sont eux, fragiles et plein
-            d'ardeur.
-          </p>
-          <p>
-            Pour en rendre compte j'ai créé un site qui mélange douceur et
-            vivacité et qui, bien que s'adressant en priorité aux parents, va
-            non sans rappeler le monde joueur et tendre de l'enfant.
-          </p>
-        </div>
-        <div class="project__see">
-          <a
-            class="a-link"
-            target="_blank"
-            href="https://github.com/nicolasbertolino/les-ptits-coquelicots"
-            >Voir le projet sur Github
-          </a>
-        </div>
-        <span class="project__number">03</span>
+              href="https://www.behance.net/nicolasbertolino"
+              >Behance</a
+            >
+          </li>
+          <li>
+            <a
+              class="b-link"
+              target="_blank"
+              href="https://github.com/nicolasbertolino"
+              >Github</a
+            >
+          </li>
+        </ul>
       </div>
-      <div></div>
-    </div>
+    </main>
     <!-- Scritps -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
+    <script src="https://unpkg.com/@barba/core"></script>
+    <script src="assets/js/pagestransition.js"></script>
     <script src="assets/js/main.js"></script>
   </body>
 </html>
