Fix links to project pages

--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
         <h4>Mes Réalisations</h4>
         <div class="projects">
           <div>
-            <a href="black-march" data-number="01">Black March</a>
-            <a href="terrefete" data-number="02">Terrefète</a>
+            <a href="/black-march" data-number="01">Black March</a>
+            <a href="/terrefete" data-number="02">Terrefète</a>
           </div>
           <div>
-            <a href="les-ptits-coquelicots" data-number="03">Les P'tits Coquelicots</a>
+            <a href="/les-ptits-coquelicots" data-number="03">Les P'tits Coquelicots</a>
           </div>
         </div>
         <div class="selected-work">
