Add .html to pages' links

--- a/index.html
+++ b/index.html
@@ -79,15 +79,15 @@
           <p>Et les couleurs</p>
         </div> -->
       </header>
-      <div id="work">
+      <div class="work">
         <h4>Mes Réalisations</h4>
         <div class="projects">
           <div>
-            <a href="/black-march" data-number="01">Black March</a>
-            <a href="/terrefete" data-number="02">Terrefète</a>
+            <a href="/black-march.html" data-number="01">Black March</a>
+            <a href="/terrefete.html" data-number="02">Terrefète</a>
           </div>
           <div>
-            <a href="/les-ptits-coquelicots" data-number="03">Les P'tits Coquelicots</a>
+            <a href="/les-ptits-coquelicots.html" data-number="03">Les P'tits Coquelicots</a>
           </div>
         </div>
         <div class="selected-work">
