--- a/les-ptits-coquelicots.html
+++ b/les-ptits-coquelicots.html
@@ -17,7 +17,7 @@
     <main data-barba="container">
       <div class="project" id="lpc">
         <div class="project__infos">
-          <a href="/#work">
+          <a href="/">
             <i class="arrow-left"></i>
           </a>
           <div>
