Remove async once from pages transitions

--- a/black-march.html
+++ b/black-march.html
@@ -31,7 +31,7 @@
               </a>
             </p>
           </div>
-          <h4>Website / Charte Graphique</h4>
+          <h4>Website / Webstore</h4>
           <h2>Black March</h2>
           <div class="project__description">
             <p>
