--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
   <body data-barba="wrapper">
     <main data-barba="container">
       <header>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" class="star">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 48 48"
+          class="star"
+        >
           <path
             fill-rule="evenodd"
             d="M20.078 14.026L24.157 0l5.02 14.026 12.548-7.013-6.588 13.247L48 24.312l-12.863 4.675 6.588 12.78-13.803-7.481L24.157 48l-4.079-13.714-13.176 7.48 5.96-12.779L0 24l12.863-3.74-5.02-13.247 12.235 7.013z"
@@ -72,71 +76,22 @@
             >
           </li>
         </ul>
-        <!-- <div class="light">
-          <p>À travers les formes</p>
-        </div>
-        <div class="dark">
-          <p>Et les couleurs</p>
-        </div> -->
       </header>
       <div class="work">
         <h4>Mes Réalisations</h4>
-        <div class="projects">
-          <div>
-            <a href="/black-march.html" data-number="01">Black March</a>
-            <a href="/terrefete.html" data-number="02">Terrefète</a>
-          </div>
-          <div>
-            <a href="/les-ptits-coquelicots.html" data-number="03">Les P'tits Coquelicots</a>
-          </div>
-        </div>
-        <div class="selected-work">
-          <div class="left">
-            <div class="img">
-              <img
-                src="https://www.lesptitscoquelicots.com/assets/images/photos/lamam1.jpg"
-                alt=""
-              />
-            </div>
-            <h3>Les P'tits Coquelicots</h3>
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 48 48"
-              class="star"
-            >
-              <path
-                fill-rule="evenodd"
-                d="M20.078 14.026L24.157 0l5.02 14.026 12.548-7.013-6.588 13.247L48 24.312l-12.863 4.675 6.588 12.78-13.803-7.481L24.157 48l-4.079-13.714-13.176 7.48 5.96-12.779L0 24l12.863-3.74-5.02-13.247 12.235 7.013z"
-              />
-            </svg>
-          </div>
-          <div class="right">
-            <div>
-              <h4>Lumière sur</h4>
-              <h2>Les P'tits Coquelicots</h2>
-              <h4>Website / Logo / Charte Graphique</h4>
-              <p>
-                Les P'tits Coquelicots est une Maison d'Assistantes Maternelles,
-                un mode de garde à mi-chemin entre l'accueil individuel et
-                l'accueil collectif, innovant et original pour les enfants.
-              </p>
-              <p>
-                <a
-                  target="_blank"
-                  class="a-link"
-                  href="https://www.lesptitscoquelicots.com/"
-                  >Voir le site +
-                </a>
-              </p>
-            </div>
-            <div class="bottom"></div>
-          </div>
+        <div>
+          <a href="/black-march.html" data-number="01">Black March</a>
+          <a href="/terrefete.html" data-number="02">Terrefète</a>
+          <a href="/les-ptits-coquelicots.html" data-number="03"
+            >Les P'tits Coquelicots</a
+          >
         </div>
       </div>
       <div class="catchphrase">
         <h3>
-          Des sites engageants qui ne ressemblent pas à celui du voisin. Pour que
-          votre visiteur ait le béguin et se souvienne de vous. À vous la gloire.
+          Des sites engageants qui ne ressemblent pas à celui du voisin. Pour
+          que votre visiteur ait le béguin et se souvienne de vous. À vous la
+          gloire.
         </h3>
       </div>
       <div class="about">
@@ -144,14 +99,14 @@
           <h1>N.</h1>
           <h3>a bit about myself</h3>
           <p>
-            Un jour, mon cerveau gauche et mon cerveau droit ont signé un pacte de
-            coopération. Depuis je design et développe des sites, d'abord à
+            Un jour, mon cerveau gauche et mon cerveau droit ont signé un pacte
+            de coopération. Depuis je design et développe des sites, d'abord à
             Toulouse mais aussi partout en France.
           </p>
           <p>
-            Dans une précédente vie, j'étudiais la sociologie et l'anthropologie.
-            J'aime tenir compte de ce que nous apprennent les sciences humaines
-            sur nos façons de penser et de faire des choix.
+            Dans une précédente vie, j'étudiais la sociologie et
+            l'anthropologie. J'aime tenir compte de ce que nous apprennent les
+            sciences humaines sur nos façons de penser et de faire des choix.
           </p>
         </div>
       </div>
