Redesign socials' link on hover

--- a/index.html
+++ b/index.html
@@ -49,29 +49,22 @@
         </ul>
         <ul class="socials">
           <li>
-            <a class="b-link" href="mailto:hello@nicolasbertolino.com">Mail</a>
+            <a href="mailto:hello@nicolasbertolino.com">Mail</a>
           </li>
           <li>
             <a
-              class="b-link"
               target="_blank"
               href="https://www.linkedin.com/in/nicolasbertolino"
               >Linkedin</a
             >
           </li>
           <li>
-            <a
-              class="b-link"
-              target="_blank"
-              href="https://www.behance.net/nicolasbertolino"
+            <a target="_blank" href="https://www.behance.net/nicolasbertolino"
               >Behance</a
             >
           </li>
           <li>
-            <a
-              class="b-link"
-              target="_blank"
-              href="https://github.com/nicolasbertolino"
+            <a target="_blank" href="https://github.com/nicolasbertolino"
               >Github</a
             >
           </li>
@@ -123,25 +116,18 @@
         <ul class="socials">
           <li>
             <a
-              class="b-link"
               target="_blank"
               href="https://www.linkedin.com/in/nicolasbertolino"
               >Linkedin</a
             >
           </li>
           <li>
-            <a
-              class="b-link"
-              target="_blank"
-              href="https://www.behance.net/nicolasbertolino"
+            <a target="_blank" href="https://www.behance.net/nicolasbertolino"
               >Behance</a
             >
           </li>
           <li>
-            <a
-              class="b-link"
-              target="_blank"
-              href="https://github.com/nicolasbertolino"
+            <a target="_blank" href="https://github.com/nicolasbertolino"
               >Github</a
             >
           </li>
